# volta

./: .gitignore  ARCHITECTURE.md  Cargo.toml  KEYBINDINGS.md  LICENSE  README.md  build.sh  run.sh  volta  volta.desktop
core/: Cargo.toml
core/src/: cover.rs  doc.rs  epub.rs  lib.rs  library.rs  main.rs  md.rs  pdf.rs  player.rs  types.rs
core/src/tui/: menu.rs  mod.rs  reader.rs  rsvp.rs  theme.rs
frontend/: book.lua  bridge.lua  config.lua  input.lua  json.lua  main.lua  progress.lua  utf8.lua
frontend/reader/: reader.lua
frontend/rsvp/: rsvp.lua
frontend/themes/: amber.lua  daylight.lua  dusk.lua  forest.lua  neon.lua  night.lua  ocean.lua  sepia.lua
frontend/ui/: menu.lua
